--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tryghost/html-to-mobiledoc": "^0.7.6",
     "article-parser": "^4.2.3",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "scrape-it": "^5.2.4"
   }
 }
